--- a/package.json
+++ b/package.json
@@ -6,10 +6,14 @@
     "start": "next start"
   },
   "dependencies": {
+    "@portabletext/react": "^2.0.2",
+    "@sanity/image-url": "^1.0.2",
     "next": "latest",
+    "next-sanity": "^4.1.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.7.1",
+    "react-portable-text": "^0.6.0",
     "react-slick": "^0.29.0",
     "slick-carousel": "^1.8.1"
   },
