--- a/package.json
+++ b/package.json
@@ -7,11 +7,14 @@
   },
   "dependencies": {
     "@portabletext/react": "^2.0.2",
+    "@sanity/client": "^5.4.1",
     "@sanity/image-url": "^1.0.2",
     "next": "latest",
+    "next-auth": "^4.20.1",
     "next-sanity": "^4.1.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.43.9",
     "react-icons": "^4.7.1",
     "react-portable-text": "^0.6.0",
     "react-slick": "^0.29.0",
