MY Photography Link Added

--- a/.env
+++ b/.env
@@ -6,5 +6,5 @@ GITHUB_ID=Iv1.6535f626fa207f00
 GITHUB_SECRET=77e2f087e94caa6de35b93dca436365b2f172443
 DISCORD_CLIENT_ID=1091409567553949786
 DISCORD_CLIENT_SECRET=iDFvXP5ZcFxNe2e7s5qr4qi6zJ9_pZEU
-NEXTAUTH_URL=https://my-blog-8jv28922j-kishakib.vercel.app
+NEXTAUTH_URL=https://my-blog-kishakib.vercel.app
 NEXTAUTH_SECRET=4d908cebacb7b45fdd0d1be0dd1f7b16
